<resources>
    <string name="app_name">DeliveryMan</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">The Food Delivering App</string>
    <string name="nav_header_subtitle">Version for Delivery Men and Women</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="user_name">Name</string>
    <string name="user_phone">Phone</string>
    <string name="user_email">E-mail</string>
    <string name="user_description">About me</string>
    <string name="title_contact_support">Contact Support</string>
    <string name="title_profile">Profile</string>
    <string name="title_deliveries">Deliveries</string>
    <string name="image_name">Image</string>
    <string name="name_hint">Add your name</string>
    <string name="email_hint">Add your email adress</string>
    <string name="phone_hint">Add your phone number</string>
    <string name="description_hint">Let people know a bit more about yourself</string>
    <string name="title_activity_deliveries">Deliveries Manager</string>

    <string name="status_sentence_accepted">You accepted the delivery. Complete it to get your payment.</string>
    <string name="status_sentence_proposal">You received this delivery job. Accept it to perform it, or you can refuse it.</string>
    <string name="status_sentence_waiting">There are no deliveries for you now. You will be notified when one will arrive.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_gps">Map</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_register">Registration</string>
    <string name="button_finish_delivery">Delivery Done!</string>
    <string name="title_activity_past_deliveries">Deliveries Performed</string>

</resources>
