<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Profile"
    tools:showIn="@layout/app_bar_profile">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="150dp"
                        android:layout_height="170dp"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/colorPrimary"
                        android:contentDescription="@string/image_name"
                        tools:srcCompat="@tools:sample/avatars" />

                    <ImageButton
                        android:id="@+id/button2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignEnd="@id/imageView"
                        android:layout_alignRight="@id/imageView"
                        android:layout_alignBottom="@id/imageView"
                        android:background="@null"
                        android:src="@android:drawable/ic_menu_camera" />

                </RelativeLayout>

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:drawableLeft="@drawable/ic_name"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/name_hint"/>

                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:drawableLeft="@drawable/ic_phone"
                    android:ems="10"
                    android:inputType="phone"
                    android:hint="@string/phone_hint"/>


                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:drawableLeft="@drawable/ic_email"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email_hint"/>


                <EditText
                    android:id="@+id/et_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:drawableLeft="@drawable/ic_info"
                    android:ems="10"
                    android:inputType="text"
                    android:hint="@string/description_hint"/>

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>